# imx6ull

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  copy_qt_libs.sh  download.sh  env-setup.sh  hardware.init  quick_setup.sh  rebuild.sh  setup_toolchain.sh  test_beep_on_device.md  verify_qt_libs.sh  修复完成总结.md  测试结果_分钟提醒功能.md
build-arm/: CMakeCache.txt  Makefile  QtImx6ullBackend  QtImx6ullBackend_automoc.cpp  cmake_install.cmake  moc_driver_manager.cpp  moc_gpio_driver.cpp  moc_led_controller.cpp
cmake/: arm-imx6ull-toolchain.cmake
config/: .init
docs/: AlarmService使用说明.md  Qt库问题解决方案.md  半点响beep问题诊断.md  快速部署指南.md  蜂鸣器修复总结.md  蜂鸣器测试说明.md
examples/: buffer_example.cpp  highperf_can_example.cpp
inc/Plugin/: gpio_imx6ull.h
inc/business/: led_manager.h
inc/connection/: led_controller.h
inc/driver/: driver_manager.h  gpio_driver.h
include/: main.h
include/core/: HardwareConfig.h  HardwareMapper.h  ISysSvrInterface.h  LogManager.h  ServiceManager.h  SystemBeep.h
include/drivers/beep/: DriverBeep.h
include/drivers/can/: DriverCAN.h  DriverCANHighPerf.h
include/drivers/gpio/: DriverGPIO.h
include/drivers/led/: DriverLED.h
include/drivers/manager/: DriverManager.h
include/drivers/pwm/: DriverPWM.h
include/drivers/scanner/: SystemScanner.h
include/drivers/serial/: DriverSerial.h
include/drivers/temperature/: DriverTemperature.h
include/protocols/: IProtocolInterface.h
include/protocols/manager/: ProtocolManager.h
include/protocols/modbus/: ModbusRTU.h  ModbusSlave.h  ModbusTCP.h
include/services/alarm/: AlarmService.h
include/services/hardware/: HardwareInitService.h
include/services/modbus/: ModbusSlaveService.h
include/services/temperature/: TemperatureService.h
include/services/time/: TimeService.h
include/services/weather/: WeatherService.h
src/: main.cpp
src/Plugin/: gpio_imx6ull.c
src/connection/: led_controller.cpp
src/core/: HardwareConfig.cpp  HardwareMapper.cpp  LogManager.cpp  ServiceManager.cpp  SystemBeep.cpp
src/driver/: driver_manager.cpp  gpio_driver.cpp
src/drivers/beep/: DriverBeep.cpp
src/drivers/can/: DriverCAN.cpp  DriverCANHighPerf.cpp
src/drivers/gpio/: DriverGPIO.cpp
src/drivers/led/: DriverLED.cpp
src/drivers/manager/: DriverManager.cpp
src/drivers/pwm/: DriverPWM.cpp
src/drivers/scanner/: SystemScanner.cpp
src/drivers/serial/: DriverSerial.cpp
src/drivers/temperature/: DriverTemperature.cpp
src/protocols/manager/: ProtocolManager.cpp
src/protocols/modbus/: ModbusRTU.cpp  ModbusSlave.cpp  ModbusTCP.cpp
src/services/alarm/: AlarmService.cpp
src/services/hardware/: HardwareInitService.cpp
src/services/modbus/: ModbusSlaveService.cpp
src/services/temperature/: TemperatureService.cpp
src/services/time/: TimeService.cpp
src/services/weather/: WeatherService.cpp
tools/: setup_test_beep.sh  test_alarm.sh  test_system_beep.sh  view_log.sh  view_module_log.sh
